--- a/docker/1.md
+++ b/docker/1.md
@@ -21,8 +21,9 @@ Dism /online /enable-feature /featurename:Microsoft-Hyper-V-All /LimitAccess /AL
 - 首先以管理员的身份运行“CMD”
 - 在命令提示符中输入命令“bcdedit /copy {current} /d “Windows10 no Hyper-V”
 - 输入命令“bcdedit /set {XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX} hypervisorlaunchtype OFF”，然后重启电脑
+- 重启电脑后在两个启动项中选择 no Hyper-V 的即可启用无Hyper-V特性的环境
 - 注意：将第2步运行后的命令出现在{}里的序列号替换第3步{}里的“XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX”
-### 删除Hyper-V启动项
+### 删除Hyper-V启动项，或者多余的启动项
 - CMD中运行bcdedit，找到相对应的启动项ID，并记录
 - 运行bcdedit /delete {XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX}，然后重启电脑
 
