--- a/docker/1.md
+++ b/docker/1.md
@@ -1,5 +1,8 @@
-# 重要说明
+# Windows10家庭版 开启关闭Hyper-V
+* 重要说明
+```
 Windows 10家庭版只能装Docker Toolbox，而且不能开Hyper-v，因为会和VM之类的虚拟机冲突，Docker Toolbox是依赖于VirualBox使用的。
+```
 ## Windows10家庭版安装Hyper-V
 - 将下面的内容复制到编辑器或者记事本当中：
 ```
