--- a/respberry/1.md
+++ b/respberry/1.md
@@ -60,9 +60,10 @@ wget https://www.python.org/ftp/python/3.7.3/Python-3.7.3.tgz
 ```
 - 解压缩
 ```
-tar zxvf openssl-1.1.1b.tar.gz
+tar zxvf Python-3.7.3.tgz
 ```
 - 添加ssl支持
+修改Modules/Setup.dist，将以下相应行的注释去除
 -- 注意：如果不是第一次安装，Setup文件生成后不会被覆盖
 ```cat >> /home/pi/Downloads/Python-3.7.3/Modules/Setup.dist <<"EOF"
 _socket socketmodule.c
@@ -77,25 +78,34 @@ EOF
 ```
 ./configure --prefix=/usr/local/python --with-openssl=/usr/local/ssl --with-openssl=/usr/local/ssl && make && make install
 ```
-
+- 更新pip3版本
+```
+python pip3 install --upgrade pip
+```
 
 ### 巨大的坑
-编译python3.7.3时，如出现以下错误，则是由于sudo的环境变量问题：
-./python: /usr/lib/arm-linux-gnueabihf/libssl.so.1.1: version `OPENSSL_1_1_1' not found 
+- 编译python3.7.3时，如出现以下错误，则是由于sudo的环境变量问题：
+```
+python: /usr/lib/arm-linux-gnueabihf/libssl.so.1.1: version `OPENSSL_1_1_1' not found 
+```
+```
 说明：sudo运行时，会默认重置环境变量为安全的环境变量，也即，但前设置的变量都会失效，只有少数配置文件中指定的环境变量能保存下来。sudo的配置文件是 /etc/sudoers 需要root权限才能读取。
-办法有两个：
-1、修改/etc/sudoers
+```
+- 解决办法有两个
+- 1、修改/etc/sudoers
 增加环境变量
 sudo vim /etc/sudoers
 末尾增加以下内容：
 LD_LIBRARY_PATH=/usr/local/ssl/lib
 export LD_LIBRARY_PATH
-2、切换到root
+- 2、切换到root
 设置单用户环境变量
 vim ~/.bashrc
 末尾增加以下内容：
 LD_LIBRARY_PATH=/usr/local/ssl/lib
 export LD_LIBRARY_PATH
 source .bashrc  #使设置生效
+- 检查办法
+```openssl version```
 
 
