--- a/respberry/1.md
+++ b/respberry/1.md
@@ -4,6 +4,15 @@
 sudo passwd root #修改密码
 su
 ```
+- 设置单用户环境变量
+```
+vim ~/.bashrc   #末尾增加以下内容：
+LD_LIBRARY_PATH=/usr/local/ssl/lib
+export LD_LIBRARY_PATH
+source .bashrc  #使设置生效
+```
+
+```
 - 下载OpenSSL源码包 https://www.openssl.org/source/
 ```
 cd /home/pi/Downloads
@@ -84,7 +93,7 @@ python pip3 install --upgrade pip
 ```
 
 ### 巨大的坑
-- 编译python3.7.3时，如出现以下错误，则是由于sudo的环境变量问题：
+- 编译python3.7.3时，如使用sudo，并出现以下错误，则是由于sudo的环境变量问题：
 ```
 python: /usr/lib/arm-linux-gnueabihf/libssl.so.1.1: version `OPENSSL_1_1_1' not found 
 ```
@@ -96,16 +105,24 @@ python: /usr/lib/arm-linux-gnueabihf/libssl.so.1.1: version `OPENSSL_1_1_1' not 
 增加环境变量
 sudo vim /etc/sudoers
 末尾增加以下内容：
+```
 LD_LIBRARY_PATH=/usr/local/ssl/lib
 export LD_LIBRARY_PATH
+```
 - 2、切换到root
 设置单用户环境变量
+```
 vim ~/.bashrc
+```
 末尾增加以下内容：
+```
 LD_LIBRARY_PATH=/usr/local/ssl/lib
 export LD_LIBRARY_PATH
 source .bashrc  #使设置生效
-- 检查办法
-```openssl version```
+```
+- 检查是否生效
+```
+openssl version
+```
 
 
