--- a/respberry/1.md
+++ b/respberry/1.md
@@ -12,7 +12,6 @@ export LD_LIBRARY_PATH
 source .bashrc  #使设置生效
 ```
 
-```
 - 下载OpenSSL源码包 https://www.openssl.org/source/
 ```
 cd /home/pi/Downloads
@@ -101,15 +100,7 @@ python: /usr/lib/arm-linux-gnueabihf/libssl.so.1.1: version `OPENSSL_1_1_1' not 
 说明：sudo运行时，会默认重置环境变量为安全的环境变量，也即，但前设置的变量都会失效，只有少数配置文件中指定的环境变量能保存下来。sudo的配置文件是 /etc/sudoers 需要root权限才能读取。
 ```
 - 解决办法有两个
-- 1、修改/etc/sudoers
-增加环境变量
-sudo vim /etc/sudoers
-末尾增加以下内容：
-```
-LD_LIBRARY_PATH=/usr/local/ssl/lib
-export LD_LIBRARY_PATH
-```
-- 2、切换到root
+- 1、切换到root
 设置单用户环境变量
 ```
 vim ~/.bashrc
@@ -120,6 +111,17 @@ LD_LIBRARY_PATH=/usr/local/ssl/lib
 export LD_LIBRARY_PATH
 source .bashrc  #使设置生效
 ```
+- 2、sudo -E
+加上-E选项后，用户可以在sudo执行时保留当前用户已存在的环境变量，不会被sudo重置
+- 3、修改/etc/sudoers
+增加环境变量
+sudo vim /etc/sudoers
+末尾增加以下内容：
+```
+LD_LIBRARY_PATH=/usr/local/ssl/lib
+export LD_LIBRARY_PATH
+```
+
 - 检查是否生效
 ```
 openssl version
