--- a/respberry/1.md
+++ b/respberry/1.md
@@ -86,6 +86,13 @@ EOF
 ```
 ./configure --prefix=/usr/local/python --with-openssl=/usr/local/ssl --with-openssl=/usr/local/ssl && make && make install
 ```
+- 编译过程中注意观察是否设置正确
+```
+checking for openssl/ssl.h in /usr/local/openssl... yes
+checking whether compiling and linking against OpenSSL works... yes
+checking for X509_VERIFY_PARAM_set1_host in libssl... yes
+checking for --with-ssl-default-suites... python
+```
 - 更新pip3版本
 ```
 python pip3 install --upgrade pip
