--- a/respberry/1.md
+++ b/respberry/1.md
@@ -45,6 +45,11 @@ echo "/usr/local/lib64" >> /etc/ld.so.conf
 ```
 ldconfig -v
 ```
+如果不是root用户，没有权限，则用sudo
+```
+sudo vim /etc/ld.so.conf
+sudo ldconfig -v
+```
 查看openssl版本
 ```
 openssl version
