--- a/respberry/1.md
+++ b/respberry/1.md
@@ -98,9 +98,27 @@ checking whether compiling and linking against OpenSSL works... yes
 checking for X509_VERIFY_PARAM_set1_host in libssl... yes
 checking for --with-ssl-default-suites... python
 ```
+- 设置路径
+```
+vim ~/.bashrc
+LD_LIBRARY_PATH=/usr/local/ssl/lib
+LD_LIBRARY_PATH=/usr/local/ssl/lib
+export LD_LIBRARY_PATH
+export PATH
+source .bashrc  #使设置生效
+```
 - 更新pip3版本
 ```
 python pip3 install --upgrade pip
+```
+- 检查pip安装
+```
+pip --version
+pip3 --version
+```
+- 查看已安装包
+```
+pip list
 ```
 
 ### 巨大的坑
