--- a/respberry/1.md
+++ b/respberry/1.md
@@ -107,10 +107,6 @@ export LD_LIBRARY_PATH
 export PATH
 source .bashrc  #使设置生效
 ```
-- 更新pip3版本
-```
-python pip3 install --upgrade pip
-```
 - 检查pip安装
 ```
 pip --version
@@ -119,6 +115,14 @@ pip3 --version
 - 查看已安装包
 ```
 pip list
+Package    Version
+---------- -------
+pip        19.0.3 
+setuptools 41.0.0
+```
+- 更新pip3版本
+```
+pip install --upgrade pip   #或者：python pip3 install --upgrade pip
 ```
 
 ### 巨大的坑
