--- a/respberry/1.md
+++ b/respberry/1.md
@@ -120,6 +120,14 @@ Package    Version
 pip        19.0.3 
 setuptools 41.0.0
 ```
+- 删除lsb_release
+如遇到错误：
+```subprocess.CalledProcessError: Command '('lsb_release', '-a')' returned non-zero exit status 1.
+```
+则需要将lsb_release移除
+```
+sudo mv /usr/bin/lsb_release /usr/bin/lsb_release.bak
+```
 - 更新pip3版本
 ```
 pip install --upgrade pip   #或者：python pip3 install --upgrade pip
@@ -153,4 +161,10 @@ source .bashrc  #使设置生效
 openssl version
 ```
 
-
+### 参考文献
+https://www.imooc.com/article/34764
+https://blog.csdn.net/lu_yonggang/article/details/62041422
+https://blog.csdn.net/yuezhuo_752/article/details/84140168
+https://blog.csdn.net/qq_38154948/article/details/83988948
+https://blog.csdn.net/wangeen/article/details/8159500
+https://blog.csdn.net/little_stupid_child/article/details/82747227
