--- a/respberry/树莓派初始安装.md
+++ b/respberry/树莓派初始安装.md
@@ -2,10 +2,14 @@
 
 ##### 下载系统镜像 2019-04-08-raspbian-stretch.zip  
 `https://www.raspberrypi.org/downloads/`
-##### 下载烧录工具 Win32DiskImager
+##### 下载、安装 烧录工具 Win32DiskImager
 `https://sourceforge.net/projects/win32diskimager/`
-##### 下载端口扫描工具Advanced Port Scanner
+##### 下载、安装 端口扫描工具Advanced Port Scanner
 `http://www.advanced-port-scanner.com/cn/`
+##### 下载、安装 高效压缩工具
+`https://sparanoid.com/lab/7z/`
+##### 下载、安装 VNC View
+`https://www.realvnc.com/en/connect/download/viewer/`
 ##### 解压、烧录系统
 解压2019-04-08-raspbian-stretch.zip  
 用Win32DiskImager，将解压的2019-04-08-raspbian-stretch.img烧录到sd卡  
@@ -24,3 +28,6 @@ ssh连接找到的ip地址，登录系统，用户名pi，密码respberry
 修改VNC开启  
 修改完成，重新启动系统  
 `sudo reboot`
+##### VNC View 连接 树莓派
+用扫描到的树莓派ip，用vnc view连接  
+按向导完成初始化  
