--- a/respberry/树莓派修改分辨率.md
+++ b/respberry/树莓派修改分辨率.md
@@ -1,5 +1,26 @@
 # 树莓派修改分辨率
 
+## 参看系统支持的分辨率
+```
+pi@raspberrypi:~ $ /opt/vc/bin/tvservice -m DMT
+Group DMT has 14 modes:
+           mode 4: 640x480 @ 60Hz 4:3, clock:25MHz progressive 
+           mode 5: 640x480 @ 72Hz 4:3, clock:31MHz progressive 
+           mode 6: 640x480 @ 75Hz 4:3, clock:31MHz progressive 
+           mode 9: 800x600 @ 60Hz 4:3, clock:40MHz progressive 
+           mode 11: 800x600 @ 75Hz 4:3, clock:49MHz progressive 
+           mode 16: 1024x768 @ 60Hz 4:3, clock:65MHz progressive 
+           mode 18: 1024x768 @ 75Hz 4:3, clock:78MHz progressive 
+  (prefer) mode 35: 1280x1024 @ 60Hz 5:4, clock:108MHz progressive 
+           mode 36: 1280x1024 @ 75Hz 5:4, clock:135MHz progressive 
+           mode 47: 1440x900 @ 60Hz 16:10, clock:106MHz progressive 
+           mode 48: 1440x900 @ 75Hz 16:10, clock:136MHz progressive 
+           mode 58: 1680x1050 @ 60Hz 16:10, clock:146MHz progressive 
+           mode 82: 1920x1080 @ 60Hz 16:9, clock:148MHz progressive 
+           mode 85: 1280x720 @ 60Hz 16:9, clock:74MHz progressive 
+
+```
+
 ## 打开配置文件
 `sudo nano /boot/config.txt`  
 
