--- a/libfacedetection/树莓派人脸检测性能对比测试.md
+++ b/libfacedetection/树莓派人脸检测性能对比测试.md
@@ -3,25 +3,51 @@
 # libfacedetection
 - 1/4 28 fps
 ```
-(venv) pi@raspberrypi:~/Develop/vision/recognize_face $ python3 facecam_detect.py --method libfacedetection --ratio 4
+$ python3 facecam_detect.py --method libfacedetection --ratio 4
 ```
 - 1/3 16 fps
 ```
-(venv) pi@raspberrypi:~/Develop/vision/recognize_face $ python3 facecam_detect.py --method libfacedetection --ratio 3
+$ python3 facecam_detect.py --method libfacedetection --ratio 3
 ```
 - 1/2 7 fps
 ```
-(venv) pi@raspberrypi:~/Develop/vision/recognize_face $ python3 facecam_detect.py --method libfacedetection --ratio 2
+$ python3 facecam_detect.py --method libfacedetection --ratio 2
 ```
 - 1/1 1.7 fps
 ```
-(venv) pi@raspberrypi:~/Develop/vision/recognize_face $ python3 facecam_detect.py --method libfacedetection --ratio 1
+$ python3 facecam_detect.py --method libfacedetection --ratio 1
 ```
-
-
-(venv) pi@raspberrypi:~/Develop/vision/recognize_face $ python3 facecam_detect.py --method libfacedetection --ratio 3
-
-(venv) pi@raspberrypi:~/Develop/vision/recognize_face $ python3 facecam_detect.py --method libfacedetection --ratio 2
-
-(venv) pi@raspberrypi:~/Develop/vision/recognize_face $ python3 facecam_detect.py --method libfacedetection --ratio 1
-
+# opencv haar  (haar速度相当不稳定，上下漂移很大)
+- 1/4 50 fps
+```
+$ python3 facecam_detect.py --method opencv-haar --ratio 4
+```
+- 1/3 35 fps
+```
+$ python3 facecam_detect.py --method opencv-haar --ratio 3
+```
+- 1/2 20 fps
+```
+$ python3 facecam_detect.py --method opencv-haar --ratio 2
+```
+- 1/1 7 fps
+```
+$ python3 facecam_detect.py --method opencv-haar --ratio 1
+```
+# dlib hog    （基本为匀速，速度很稳定，1/4时由于人脸可能 小于70 * 70，所以经常会检测不到人脸）
+- 1/4 29 fps
+```
+$ python3 facecam_detect.py --method dlib-hog --ratio 4
+```
+- 1/3 16.5 fps
+```
+$ python3 facecam_detect.py --method dlib-hog --ratio 3
+```
+- 1/2 7 fps
+```
+$ python3 facecam_detect.py --method dlib-hog --ratio 2
+```
+- 1/1 1.9 fps
+```
+$ python3 facecam_detect.py --method dlib-hog --ratio 1
+```
