--- a/libfacedetection/树莓派人脸检测性能对比测试.md
+++ b/libfacedetection/树莓派人脸检测性能对比测试.md
@@ -1,6 +1,6 @@
 # 树莓派人脸检测性能对比测试
 
-# libfacedetection
+# libfacedetection   (人脸检测效果好，对于侧脸、小脸识别率高，速度运行也很稳定)
 - 1/4 28 fps
 ```
 $ python3 facecam_detect.py --method libfacedetection --ratio 4
