--- a/libfacedetection/树莓派人脸检测性能对比测试.md
+++ b/libfacedetection/树莓派人脸检测性能对比测试.md
@@ -51,3 +51,5 @@ $ python3 facecam_detect.py --method dlib-hog --ratio 2
 ```
 $ python3 facecam_detect.py --method dlib-hog --ratio 1
 ```
+
+![性能测试图片](https://raw.githubusercontent.com/shaozhenzhou/notebook/master/libfacedetection/%E5%BE%AE%E4%BF%A1%E5%9B%BE%E7%89%87_20190512202358.png)
