--- a/respberry/树莓派更新国内加速源.md
+++ b/respberry/树莓派更新国内加速源.md
@@ -1,7 +1,8 @@
 ### 树莓派更新国内加速源
 
 ##### apt-get 加速  
-```sudo nano /etc/apt/sources.list 
+```
+sudo nano /etc/apt/sources.list 
 #添加清华源：  
 deb https://mirrors.tuna.tsinghua.edu.cn/raspbian/raspbian/ stretch main contrib non-free rpi
 deb-src https://mirrors.tuna.tsinghua.edu.cn/raspbian/raspbian/ stretch main contrib non-free rpi
