--- a/respberry/树莓派更新国内加速源.md
+++ b/respberry/树莓派更新国内加速源.md
@@ -1,33 +1,36 @@
-### 树莓派更新国内加速源
+# 树莓派更新国内加速源
 
-##### apt-get 加速  
+## apt-get 加速  
 ```
 sudo nano /etc/apt/sources.list 
 #添加清华源：  
 deb https://mirrors.tuna.tsinghua.edu.cn/raspbian/raspbian/ stretch main contrib non-free rpi
 deb-src https://mirrors.tuna.tsinghua.edu.cn/raspbian/raspbian/ stretch main contrib non-free rpi
 ```
-##### 安装 python3-venv
-`sudo apt-get install python3-venv`
-
-##### 下载 vision 源代码
+## git 加速
 ```
-mkdir ~/Develop
-cd ~/Develop
-git clone https://git.com/shaozhenzhou/vision.git
-cd vision
+# GitHub Start
+192.30.253.113 github.com
+192.30.253.119 gist.github.com
+185.199.108.153 assets-cdn.github.com
+151.101.184.133 raw.githubusercontent.com
+151.101.184.133 gist.githubusercontent.com
+151.101.184.133 cloud.githubusercontent.com
+151.101.184.133 camo.githubusercontent.com
+151.101.184.133 avatars0.githubusercontent.com
+151.101.184.133 avatars1.githubusercontent.com
+151.101.184.133 avatars2.githubusercontent.com
+151.101.184.133 avatars3.githubusercontent.com
+151.101.184.133 avatars4.githubusercontent.com
+151.101.184.133 avatars5.githubusercontent.com
+151.101.184.133 avatars6.githubusercontent.com
+151.101.184.133 avatars7.githubusercontent.com
+151.101.184.133 avatars8.githubusercontent.com
+151.101.185.194 github.global.ssl.fastly.net
+# GitHub End
 ```
 
-##### 创建 虚拟环境
-`python3 -m venv venv`  
-
-##### 激活 虚拟环境
-`source venv/bin/activate`  
-
-##### pip3 升级
-`pip3 install pip --upgrade`
-
-##### pip3 加速
+## pip3 加速，添加源
 ```
 mkdir ~/.pip
 nano ~/.pip/pip.conf
@@ -37,4 +40,23 @@ index-url = https://pypi.tuna.tsinghua.edu.cn/simple
 [install]
 trusted-host = pypi.tuna.tsinghua.edu.cn
 ```
+
+## pip3 升级
+`pip3 install pip --upgrade`
+
+## 安装 python3-venv
+`sudo apt-get install python3-venv`
+
+## 下载 vision 源代码
+```
+mkdir ~/Develop
+cd ~/Develop
+git clone https://git.com/shaozhenzhou/vision.git
+cd vision
+```
+##### 创建 虚拟环境
+`python3 -m venv venv`  
+
+##### 激活 虚拟环境
+`source venv/bin/activate`  
 
